# sentspace

./: .gitignore  .gitlab-ci.yml  .singularitybashrc  Dockerfile  README.md  Sentence.html  __main__.py  index.html  package_lexical.html  pyproject.toml  requirements.txt  sentspace_docker.sh  setup.py  singularity-shell.sh
.circleci/: config.yml
embedding/: __init__.py  index.html  utils.html
html/sentspace/embedding/: index.html  utils.html
html/sentspace/lexical/: index.html  utils.html
html/sentspace/syntax/utils/: index.html
html/sentspace/utils/: io.html  text.html
lexical/: __init__.py  __main__.py  index.html  sanity_checks.html  utils.html
sentspace/: Sentence.py  __init__.py  __main__.py  package_lexical.py  s3.py  sanity_checks.py  utils.py
sentspace/analysis/: dim_reduction.py
sentspace/embedding/: __init__.py  utils.py
sentspace/lexical/: __init__.py  __main__.py  utils.py
sentspace/syntax/: README.md  __init__.py  __main__.py  compute_tree_dlt_left_corner.py  content_ratios.py  features.html  features.py  index.html
sentspace/syntax/utils/: __init__.py  calcDLT.py  calcEmbd.py  dlt.sh  leftcorner.sh  linetrees2mlpsemprocdecpars  parse_trees.sh  parser-fullberk  ptb_tokenizer.sed
sentspace/utils/: __init__.py  caching.py  io.py  misc.py  plotting.py  resources.py  s3.html  s3.py  text.py  utils.py
sentspace/vis/: __main__.py
sentspace/web/: __main__.py
syntax/: README.md  features.html  index.html
syntax/utils/: __init__.py  index.html  parse_trees.sh  parser-fullberk  postprocess_trees.sh  tokenize.sh
test/: test_syntax.py
utils/: caching.html  caching.py  index.html  io.html  misc.html  plotting.py  s3.html  s3.py  text.html  text.py  utils.html  utils.py
vis/: index.html
web/: index.html
