[tool.poetry]
name = "sentspace"
version = "0.0.2"
description = ""
authors = ["Greta Tuckute <gretatu@mit.edu>", 
           "Aalok Sathe <asathe@mit.edu>",
          ]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
nltk = "3.6.2"
pandas = "^1.3.5"
PyYAML = "^6.0"
transformers = "4.11.3"
scipy = "^1.7.3"
boto3 = "^1.20.25"
torch = "1.9.0"
seaborn = "0.11.2"
numpy = "^1.22.1"
dash = "^2.0.0"
plotly = "^5.5.0"

Morfessor = { version = "^2.0.6", optional = true }
PyICU = { version = "^2.8", optional = true }
pycld2 = { version = "^0.41", optional = true }
polyglot = { version = "^16.7.4", optional = true }
dash-bootstrap-components = "^1.0.3"

[tool.poetry.extras]
polyglot = ["polyglot", "PyICU", "pycld2", "Morfessor"]

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sentspace = 'sentspace.__main__:main'
"sentspace.web" = 'sentspace.web.__main__:main'

[tool.poetry.urls]
"issues" = "https://github.com/sentspace/sentspace/issues"
"homepage" = "https://github.com/aalok-sathe/sentspace"
"documentation" = "https://aalok-sathe.github.io/sentspace"
